--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -11,17 +11,23 @@ $search
 $mathjax
 </head>
 <body>
+
+<div id="top"><!-- do not remove this div! -->
+<!--BEGIN TITLEAREA-->
+<div id="titlearea">
 <div id="fg_docx_header">
 	<div id="fg_top_nav">
 		<ul>
 			<li><a href="#"><img src="logo-23.png"></a>
 				<ul>
-					<li><a href="wiki">Wiki</a></li>
-					<li><a href="wiki">Wiki</a></li>
+					<li><a href="http://flightgear.org">Home Page</a></li>
+					<li><a href="http://wiki.flightgear.org/Portal:Developer">Developer Wiki</a></li>
+					<li><a href="http://flightgear-bugs.googlecode.com/">Issue Tracker</a></li>
+					<li><a href="http://flightgear.simpits.org:8080/">Build Server</a></li>
 				</ul>
 			</li>
 		</ul>
-	</nav>
+	</div>
 	<h1>FlightGear Documentation Project</h1>
 	<ul id="menu">
 	<li><a href="info.php">Home</a></li>
@@ -31,11 +37,9 @@ $mathjax
 	</ul>
 </div>
 
-<div id="top"><!-- do not remove this div! -->
-<img src="http://wiki.flightgear.org/skins/common/images/icons-fg-135.png" 
-		height="50"   style="float: right; margin: 5px 5px 0 0;">
-<!--BEGIN TITLEAREA-->
-<div id="titlearea">
+
+
+
 <table cellspacing="0" cellpadding="0">
  <tbody>
  <tr style="height: 56px;">
