--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -20,20 +20,25 @@ $mathjax
 		<ul>
 			<li><a href="#"><img src="logo-23.png"></a>
 				<ul>
-					<li><a href="http://flightgear.org">Home Page</a></li>
-					<li><a href="http://wiki.flightgear.org/Portal:Developer">Developer Wiki</a></li>
-					<li><a href="http://flightgear-bugs.googlecode.com/">Issue Tracker</a></li>
-					<li><a href="http://flightgear.simpits.org:8080/">Build Server</a></li>
+					<li><a href="http://flightgear.org" target="_blank">Home Page</a></li>
+					<li><a href="http://wiki.flightgear.org/Portal:Developer"  target="_blank">Developer Wiki</a></li>
+					<li><a href="https://code.google.com/p/flightgear-bugs/issues/list"  target="_blank">Issue Tracker</a></li>
+					<li><a href="http://flightgear.simpits.org:8080/"  target="_blank">Build Server</a></li>
 				</ul>
 			</li>
 		</ul>
 	</div>
 	<h1>FlightGear Documentation Project</h1>
 	<ul id="menu">
-	<li><a href="info.php">Home</a></li>
+		<li><a href="../">Home</a></li>
+		<li><a  href='../fgdata/'>FG Data</a></li>
+		<li><a  href='../flightgear/'>FlightGear</a></li>
 		<li><a  href='../fgms-0/'>FGMS-0</a></li>
-		<li><a  href='../fgms-1/'>FGMS-0</a></li>
+		<li><a  href='../fgms-1/'>FGMS-1</a></li>
+		<li><a  href='../plib/'>PLIB</a></li>
+		<li><a  href='../osg/'>OSG</a></li>
 		<li><a  href='../simgear/'>SimGear</a></li>
+		<li><a  href='../terragear/'>TerraGear</a></li>
 	</ul>
 </div>
 
