--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -33,17 +33,7 @@ $extrastylesheet
 		</ul>
 	</div>
 	<h1>FlightGear Documentation Project</h1>
-	<ul id="menu">
-		<li><a href="../">Home</a></li>
-		<li><a href='../fgdata/'>FG Data</a></li>
-		<li><a href='../flightgear/'>FlightGear</a></li>
-		<li><a href='../fgms-0/'>FGMS-0</a></li>
-		<li><a href='../fgms-1/'>FGMS-1</a></li>
-		<li><a href='../plib/'>PLIB</a></li>
-		<li><a href='../osg/'>OSG</a></li>
-		<li><a href='../simgear/'>SimGear</a></li>
-		<li><a href='../terragear/'>TerraGear</a></li>
-	</ul>
+	<ul id="menu">___NAV_ITEMS___</ul>
 </div>
 
 <table cellspacing="0" cellpadding="0">
