add google search

--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -22,6 +22,21 @@ $extrastylesheet
 <!--BEGIN TITLEAREA-->
 <div id="titlearea">
 <div id="fg_docx_header">
+    <div style="float: right; width: 40%">
+        <script>
+        (function() {
+            var cx = '005020340521889986907:tdsrgbpk9s4';
+            var gcse = document.createElement('script');
+            gcse.type = 'text/javascript';
+            gcse.async = true;
+            gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+                '//www.google.com/cse/cse.js?cx=' + cx;
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(gcse, s);
+        })();
+        </script>
+        <gcse:searchbox-only></gcse:searchbox-only>
+    </div>
 	<div id="fg_top_nav">
 		<ul>
 			<li><a href="#"><img src="logo-23.png"></a>
@@ -35,6 +50,8 @@ $extrastylesheet
 		</ul>
 	</div>
 	<h1>FlightGear Documentation Project</h1>
+
+
 	<ul id="menu">___NAV_ITEMS___</ul>
 </div>
 
