--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -49,7 +49,7 @@ $extrastylesheet
 			</li>
 		</ul>
 	</div>
-	<h1>FlightGear Documentation Project</h1>
+	<h1>FlightGear API Documentation</h1>
 
 
 	<ul id="menu">___NAV_ITEMS___</ul>
