--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -64,9 +64,9 @@ $extrastylesheet
   <!--BEGIN PROJECT_NAME-->
   <td style="padding-left: 0.5em;">
    <div id="projectname">$projectname
-   <!--BEGIN PROJECT_NUMBER-->&#160;<span id="projectnumber">$projectnumber</span><!--END PROJECT_NUMBER-->
+   <!--BEGIN PROJECT_NUMBER-->&#160;<span id="projectnumber">$projectnumber ___REPO_BRANCH___</span> ___REPO_LINK___<!--END PROJECT_NUMBER-->
    </div>
-   <!--BEGIN PROJECT_BRIEF--><div id="projectbrief">$projectbrief</div><!--END PROJECT_BRIEF-->
+   <!--BEGIN PROJECT_BRIEF--><div id="projectbrief">$projectbrief </div><!--END PROJECT_BRIEF-->
   </td>
   <!--END PROJECT_NAME-->
   <!--BEGIN !PROJECT_NAME-->
