--- a/etc/fg_docx_header.html
+++ b/etc/fg_docx_header.html
@@ -23,19 +23,7 @@ $extrastylesheet
 <div id="titlearea">
 <div id="fg_docx_header">
     <div style="float: right; width: 40%">
-        <script>
-        (function() {
-            var cx = '005020340521889986907:tdsrgbpk9s4';
-            var gcse = document.createElement('script');
-            gcse.type = 'text/javascript';
-            gcse.async = true;
-            gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
-                '//www.google.com/cse/cse.js?cx=' + cx;
-            var s = document.getElementsByTagName('script')[0];
-            s.parentNode.insertBefore(gcse, s);
-        })();
-        </script>
-        <gcse:searchbox-only></gcse:searchbox-only>
+
     </div>
 	<div id="fg_top_nav">
 		<ul>
@@ -44,7 +32,7 @@ $extrastylesheet
 					<li><a href="http://flightgear.org" target="_blank">Home Page</a></li>
 					<li><a href="http://wiki.flightgear.org/Portal:Developer"  target="_blank">Developer Wiki</a></li>
 					<li><a href="https://code.google.com/p/flightgear-bugs/issues/list"  target="_blank">Issue Tracker</a></li>
-					<li><a href="http://flightgear.simpits.org:8080/"  target="_blank">Build Server</a></li>
+					<li><a href="http://build.flightgear.org:8080/"  target="_blank">Build Server</a></li>
 				</ul>
 			</li>
 		</ul>
